; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_adc.c_ti_adc_intr_locked.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_adc.c_ti_adc_intr_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_adc_softc = type { i32 }

@ADC_IRQ_FIFO0_THRES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ti_adc_softc*, i32)* @ti_adc_intr_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ti_adc_intr_locked(%struct.ti_adc_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ti_adc_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ti_adc_softc* %0, %struct.ti_adc_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @ADC_IRQ_FIFO0_THRES, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load %struct.ti_adc_softc*, %struct.ti_adc_softc** %3, align 8
  %11 = call i32 @ti_adc_read_data(%struct.ti_adc_softc* %10)
  br label %12

12:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @ti_adc_read_data(%struct.ti_adc_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
